--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(Qt5 COMPONENTS Core Quick REQUIRED)
 find_package(cpprestsdk CONFIG REQUIRED)
 find_package(OpenSSL REQUIRED)
+find_package(Microsoft.GSL CONFIG REQUIRED)
 
 add_executable(sdesktop
   main.cpp
@@ -59,4 +60,4 @@ target_compile_definitions(sdesktop
   PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
 
 target_link_libraries(sdesktop
-  PRIVATE Qt5::Core Qt5::Quick cpprestsdk::cpprest OpenSSL::SSL OpenSSL::Crypto)
+  PRIVATE Qt5::Core Qt5::Quick cpprestsdk::cpprest OpenSSL::SSL OpenSSL::Crypto Microsoft.GSL::GSL)
